--- a/env.example
+++ b/env.example
@@ -3,4 +3,11 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=
 # Keep this secret - set only in Vercel Project Environment (Server)
 SUPABASE_SERVICE_ROLE_KEY=
 
+# Site URL for sitemap generation (e.g., https://yourdomain.com or https://yourdomain.vercel.app)
+NEXT_PUBLIC_SITE_URL=
+
+# Redis Configuration (Upstash)
+# Get these from https://console.upstash.com/
+UPSTASH_REDIS_REST_URL=
+UPSTASH_REDIS_REST_TOKEN=
 
