--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.80.0",
+    "@upstash/redis": "^1.35.8",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.544.0",
     "next": "16.0.10",
